2009-12-03  John W. Eaton  <jwe@octave.org>

	* Makefile.am (CLEANFILES, DISTCLEANFILES): New variables.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* @Blork/module.mk, @Cork/module.mk, @Dork/module.mk,
	@Gork/module.mk, @Pork/module.mk, @Sneetch/module.mk,
	@Snork/module.mk, @Spork/module.mk, Makefile.am: New files.
	* Makefile.in: Delete.

2009-10-19  Rik  <octdev@nomad.inbox5.com>

	* fntests.m: .cc files are now included in the list of files requiring
	tests only if they define a user function (DEFUN or DEFUN_DLD)

2009-10-19  Rik  <octdev@nomad.inbox5.com>

	* fntests.m: Remove deprecated functions from list of functions
	requiring new tests to be written.

2009-10-08  Rik  <octdev@nomad.inbox5.com>

	* fntests.m: Fix typo of an extra space in instructions to user.

2009-10-05  Rik  <octdev@nomad.inbox5.com>

	* fntests.m: Fix typo directing users to the wrong log file

2009-06-23  Robert T. Short  <octave@phaselockedsystems.com>

	* @Blork/Blork.m, @Blork/bleek.m, @Blork/display.m, @Blork/get.m,
	@Blork/set.m, @Cork/Cork.m, @Cork/click.m, @Cork/display.m,
	@Cork/get.m, @Cork/set.m, @Dork/Dork.m, @Dork/bling.m,
	@Dork/display.m, @Dork/gack.m, @Dork/get.m, @Dork/getStash.m,
	@Dork/private/myStash.m, @Dork/set.m, @Gork/Gork.m, @Gork/cork.m,
	@Gork/display.m, @Gork/gark.m, @Gork/get.m, @Gork/set.m,
	@Gork/subsasgn.m, @Gork/subsref.m, @Pork/Pork.m, @Pork/bling.m,
	@Pork/display.m, @Pork/get.m, @Pork/gurk.m,
	@Pork/private/myStash.m, @Pork/set.m, @Sneetch/Sneetch.m,
	@Sneetch/display.m, @Snork/Snork.m, @Snork/cack.m,
	@Snork/display.m, @Snork/end.m, @Snork/get.m, @Snork/getStash.m,
	@Snork/gick.m, @Snork/loadobj.m, @Snork/private/myStash.m,
	@Snork/saveobj.m, @Snork/set.m, @Snork/subsasgn.m,
	@Snork/subsindex.m, @Snork/subsref.m, @Spork/Spork.m,
	@Spork/cack.m, @Spork/display.m, @Spork/geek.m, @Spork/get.m,
	@Spork/getStash.m, @Spork/loadobj.m, @Spork/private/myStash.m,
	@Spork/saveobj.m, @Spork/set.m, test_classes.m: New files.
