@@ -1,5 +1,3 @@
-FCN_FILE_DIRS += @Dork
-
 at_Dork_FCN_FILES = \
   @Dork/Dork.m \
   @Dork/bling.m \
@@ -7,6 +5,7 @@ at_Dork_FCN_FILES = \
   @Dork/gack.m \
   @Dork/get.m \
   @Dork/getStash.m \
-  @Dork/set.m
+  @Dork/set.m \
+  @Dork/private/myStash.m
 
 FCN_FILES += $(at_Dork_FCN_FILES)
