@@ -1,11 +1,10 @@
-FCN_FILE_DIRS += @Pork
-
 at_Pork_FCN_FILES = \
   @Pork/Pork.m \
   @Pork/bling.m \
   @Pork/display.m \
   @Pork/get.m \
   @Pork/gurk.m \
-  @Pork/set.m
+  @Pork/set.m \
+  @Pork/private/myStash.m
 
 FCN_FILES += $(at_Pork_FCN_FILES)
