@@ -1,5 +1,3 @@
-FCN_FILE_DIRS += @Sneetch
-
 at_Sneetch_FCN_FILES = \
   @Sneetch/Sneetch.m \
   @Sneetch/display.m
