@@ -1,5 +1,3 @@
-FCN_FILE_DIRS += @Snork
-
 at_Snork_FCN_FILES = \
   @Snork/Snork.m \
   @Snork/cack.m \
@@ -13,6 +11,7 @@ at_Snork_FCN_FILES = \
   @Snork/set.m \
   @Snork/subsasgn.m \
   @Snork/subsindex.m \
-  @Snork/subsref.m
+  @Snork/subsref.m \
+  @Snork/private/myStash.m
 
 FCN_FILES += $(at_Snork_FCN_FILES)
